added login system and login verification

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
                 "-g",
                 "${file}",
                 "db.cpp",
+                "user_function.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
                 "-lsqlite3"
